--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "juditgreskovits-profile-built-w-gatsby",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Profile of Judit Greskovits - built with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Judit Greskovits <juditgreskovits@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.21.0",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.0",
-    "gatsby-plugin-offline": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.5.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "babel-plugin-styled-components": "1.10.7",
+    "gatsby": "2.21.0",
+    "gatsby-image": "2.4.0",
+    "gatsby-plugin-manifest": "2.4.0",
+    "gatsby-plugin-offline": "3.2.0",
+    "gatsby-plugin-prefetch-google-fonts": "1.4.3",
+    "gatsby-plugin-react-helmet": "3.3.0",
+    "gatsby-plugin-react-svg": "3.0.0",
+    "gatsby-plugin-sharp": "2.6.0",
+    "gatsby-plugin-styled-components": "3.3.0",
+    "gatsby-source-filesystem": "2.3.0",
+    "gatsby-transformer-sharp": "2.5.0",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-helmet": "6.0.0",
+    "styled-components": "5.1.0",
+    "styled-reset": "4.1.4"
   },
   "devDependencies": {
     "prettier": "2.0.5"
@@ -36,9 +42,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/juditgreskovits"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/juditgreskovits"
   }
 }
