--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "gatsby serve -h=0.0.0.0 -p=$PORT",
+    "start": "gatsby serve -H=0.0.0.0 -p=$PORT",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
