--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-styled-components": "3.3.0",
     "gatsby-source-filesystem": "2.3.0",
     "gatsby-transformer-sharp": "2.5.0",
+    "marked": "1.0.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -46,9 +47,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/juditgreskovits"
+    "url": "https://github.com/juditgreskovits/juditgreskovits2020"
   },
   "bugs": {
-    "url": "https://github.com/juditgreskovits"
+    "url": "https://github.com/juditgreskovits/juditgreskovits2020/issues"
   }
 }
