--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,9 +1,10 @@
 name: Build and deploy
 run-name: ${{ github.actor }} is deploying to Heroku
 
-on: [push]
-  branches:
-    - master
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   Build and deploy:
